--- a/vehicle_renting/src/app/components/nav-bar/nav-bar.html
+++ b/vehicle_renting/src/app/components/nav-bar/nav-bar.html
@@ -4,7 +4,7 @@
   <span class="text-2xl text-white">Vehicle Renting</span>
 
   <ul class="text-white md:flex hidden items-center gap-10">
-    <li><a class="hover:text-white/70 transition" href="#">Home</a></li>
+    <li><a class="hover:text-white/70 transition" routerLink="dashboard">Dashboard</a></li>
     <li><a class="hover:text-white/70 transition" routerLink="cars">Cars</a></li>
     <li><a class="hover:text-white/70 transition" routerLink="booking">Booking</a></li>
     <li><a class="hover:text-white/70 transition" href="#">Pricing</a></li>
@@ -23,9 +23,9 @@
   <div #txtMobileMenu
     class="mobile-menu absolute top-17.5 left-0 w-full bg-linear-to-r from-indigo-700 to-violet-500 p-6 hidden md:hidden">
     <ul class="flex flex-col space-y-4 text-white text-lg">
-      <li><a href="#" class="text-sm">Home</a></li>
-      <li><a href="#" routerLink="cars" class="text-sm">Cars</a></li>
-      <li><a href="#" routerLink="booking" class="text-sm">Booking</a></li>
+      <li><a routerLink="dashboard" class="text-sm">Dashboard</a></li>
+      <li><a routerLink="cars" class="text-sm">Cars</a></li>
+      <li><a routerLink="booking" class="text-sm">Booking</a></li>
       <li><a href="#" class="text-sm">Pricing</a></li>
     </ul>
 
