--- a/vehicle_renting/src/app/components/nav-bar/nav-bar.html
+++ b/vehicle_renting/src/app/components/nav-bar/nav-bar.html
@@ -7,7 +7,7 @@
     <li><a class="hover:text-white/70 transition" routerLink="dashboard">Dashboard</a></li>
     <li><a class="hover:text-white/70 transition" routerLink="cars">Cars</a></li>
     <li><a class="hover:text-white/70 transition" routerLink="booking">Booking</a></li>
-    <li><a class="hover:text-white/70 transition" href="#">Pricing</a></li>
+    <li><a class="hover:text-white/70 transition" routerLink="customers">Customers</a></li>
   </ul>
 
 
@@ -26,7 +26,7 @@
       <li><a routerLink="dashboard" class="text-sm">Dashboard</a></li>
       <li><a routerLink="cars" class="text-sm">Cars</a></li>
       <li><a routerLink="booking" class="text-sm">Booking</a></li>
-      <li><a href="#" class="text-sm">Pricing</a></li>
+      <li><a routerLink="customers" class="text-sm">Customers</a></li>
     </ul>
 
   </div>
