--- a/vehicle_renting/src/app/pages/customer/customer.html
+++ b/vehicle_renting/src/app/pages/customer/customer.html
@@ -10,6 +10,6 @@
       </div>
     </div>
   </div>
-  <app-add-customer [isOpen]="isAddCustomerModalOpen()" (onClose)="closeAddCustomerModal()"
-    (refresh)="loadCustomers()" />
+  <app-add-customer [isOpen]="isAddCustomerModalOpen()" [updateCustomer]="selectedCustomer()"
+    (onClose)="closeAddCustomerModal()" (refresh)="loadCustomers()" />
 </div>
