--- a/vehicle_renting/src/app/components/add-car/add-car.html
+++ b/vehicle_renting/src/app/components/add-car/add-car.html
@@ -1,5 +1,5 @@
 <!-- Backdrop overlay -->
-<div class="fixed inset-0 bg-black/50 z-40" [class.hidden]="!isOpen()" (click)="closeModal()"></div>
+<div class="fixed inset-0 bg-black/50 z-40 text-black" [class.hidden]="!isOpen()" (click)="closeModal()"></div>
 
 <!-- Modal container -->
 <div class="fixed inset-0 flex items-center justify-center z-50 pointer-events-none" [class.hidden]="!isOpen()">
