--- a/vehicle_renting/src/app/components/nav-bar/nav-bar.html
+++ b/vehicle_renting/src/app/components/nav-bar/nav-bar.html
@@ -8,6 +8,7 @@
     <li><a class="hover:text-white/70 transition" routerLink="cars">Cars</a></li>
     <li><a class="hover:text-white/70 transition" routerLink="booking">Booking</a></li>
     <li><a class="hover:text-white/70 transition" routerLink="customers">Customers</a></li>
+    <li><a (click)="logout()" class="hover:text-white/70 transition">Log Out</a></li>
   </ul>
 
 
@@ -27,6 +28,7 @@
       <li><a routerLink="cars" class="text-sm">Cars</a></li>
       <li><a routerLink="booking" class="text-sm">Booking</a></li>
       <li><a routerLink="customers" class="text-sm">Customers</a></li>
+      <li><a (click)="logout()" class="cursor-pointer text-sm ">Log Out</a></li>
     </ul>
 
   </div>
