--- a/vehicle_renting/src/app/pages/customer/customer.html
+++ b/vehicle_renting/src/app/pages/customer/customer.html
@@ -1,5 +1,5 @@
-<div class="flex flex-col  items-center min-h-screen bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
-  <button type="button" class=" bg-blue-600 text-white p-2 rounded-xl shadow-lg/80  mb-6"
+<div class="flex flex-col my-auto gap-6 px-6 md:px-16 lg:px-24 xl:px-32 py-12 justify-center">
+  <button type="button" class="bg-blue-600 text-white p-2 rounded-xl shadow-lg/80  mb-6"
     (click)="openAddCustomerModal()">Add
     Customer</button>
   <div class="-m-1.5 w-1/2 md:w-full overflow-x-auto">
