--- a/vehicle_renting/src/app/pages/dashboard/dashboard.html
+++ b/vehicle_renting/src/app/pages/dashboard/dashboard.html
@@ -1,1 +1,28 @@
-<p>dashboard works!</p>
+<div class="flex flex-col mx-4 my-4 gap-10">
+  <div class="flex flex-row gap-20  text-center justify-between items-center h-50">
+    <div class="flex flex-col basis-1/3 border shadow-md/80 rounded-2xl h-full justify-around">
+      <p class="font-semibold">Customers</p>
+      <p class="text-6xl font-bold">{{ countCustomers() }}</p>
+    </div>
+    <div class="flex flex-col basis-1/3 border shadow-md/80 rounded-2xl h-full justify-around">
+      <p class="font-semibold">Cars</p>
+      <p class="text-6xl font-bold"> {{ countCars() }}</p>
+    </div>
+    <div class="flex flex-col basis-1/3 border shadow-md/80 rounded-2xl h-full justify-around">
+      <p class="font-semibold">Bookings</p>
+      <p class="text-6xl font-bold">{{ countBookings() }}</p>
+    </div>
+  </div>
+  <div class="flex flex-col border shadow-md/80 rounded-2xl p-4">
+    <p class="font-semibold text-lg mb-4">Total Revenue</p>
+    <p class="text-4xl font-bold">{{ totalRevenue() }} €</p>
+  </div>
+  <div class="flex flex-col border shadow-md/80 rounded-2xl p-4">
+    <p class="font-semibold text-lg mb-4">Booking Dates</p>
+    <div class="flex flex-row justify-around flex-wrap gap-4">
+      @for (date of bookingDates(); track $index) {
+      <p class="text-md font-semibold">{{ date }}</p>
+      }
+    </div>
+
+  </div>
